<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RideShare</string>
    <string name="linea">———————— o ————————</string>
    <string name="no_cuenta">¿No tienes cuenta? </string>
    <string name="registrate">Registrate aquí</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="introduce_correo">Introduce tu correo: </string>
    <string name="introduce_contrasena">Introduce tu contraseña: </string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="cargando">Cargando...</string>
    <string name="repite_contrasena">Repite tu contraseña: </string>
    <string name="registrarse">Registrarse</string>
    <string name="registrando">Registrando...</string>
    <string name="chat">Chat</string>
    <string name="escribe_mensaje">Escribe un mensaje...</string>
    <string name="eligepunto_mapa">Toca el mapa para elegir un punto</string>
    <string name="confirmar_salida">Confirmar Salida</string>
    <string name="mensajes">Mensajes</string>
    <string name="no_conversacion">No tienes conversaciones aún</string>
    <string name="usuario">USUARIO</string>
    <string name="info_personal">Información personal</string>
    <string name="anadir_bio"> Añadir biografía</string>
    <string name="nombre">Nombre</string>
    <string name="editar_nombre"> Editar nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="editar_apellidos"> Editar apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="editar_telefono"> Editar teléfono</string>
    <string name="cambiar_contrasena"> Cambiar contraseña</string>
    <string name="publicar_nuevoviaje">Publicar nuevo viaje</string>
    <string name="tocar_abrir_mapa">Toca para abrir el mapa</string>
    <string name="hora_salida">Hora de salida (ej: 08:00)</string>
    <string name="comentario">Comentario (Opcional)...</string>
    <string name="publicar_viaje">Publicar Viaje</string>
    <string name="desde">Desde ...</string>
    <string name="continuar">Continuar</string>
    <string name="indica_salida">Indica tu lugar de salida.</string>
    <string name="elegir_origen">Toca para elegir origen en el mapa</string>
    <string name="slogan">Comparte viaje, haz contactos y ahorra junto a tus compañeros con RideShare.</string>
    <string name="descripcion">Descripción...</string>
    <string name="distancia">A 5.2 km de ti</string>
    <string name="viaje_hora">Salida a las 00:00</string>
    <string name="uno_d">1d</string>
    <string name="coordenadas_guardadas">Coordenadas guardadas</string>
    <string name="ubicacion_guardada">Ubicación guardada</string>
    <string name="ubicacion_seleccionada">Ubicación seleccionada</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="publicar">Publicar</string>
    <string name="eliminar_chat">Eliminar chat</string>
    <string name="eliminar_paraambos_usuarios">¿Quieres eliminar este chat? Se borrará para ambos usuarios.</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="error_cargarchat">Error cargando chats</string>
    <string name="error_eliminar">Error al eliminar</string>
    <string name="sin_conexion">Sin conexión</string>
    <string name="sesion_usuario">sesion_usuario</string>
    <string name="foto_ac">Foto actualizada</string>
    <string name="error_guardar_foto">Error al guardar foto</string>
    <string name="error_cargar_imagen">Error al cargar imagen:  </string>
    <string name="error_cargar_perfil">Error al cargar perfil:  </string>
    <string name="guardar">Guardar</string>
    <string name="sesion_invalida">Error: Sesión no válida</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="confirmar_contrasena">Confirmar nueva contraseña</string>
    <string name="contrasena_corta">La contraseña debe tener al menos 4 caracteres</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="campos_obligatorios">Todos los campos son obligatorios</string>
    <string name="cambiar">Cambiar</string>
    <string name="contrasena_actual_incorrecta">La contraseña actual es incorrecta</string>
    <string name="causa">Causa:</string>
    <string name="error_guardar">Error al guardar</string>
    <string name="error_imagen">Error al procesar imagen</string>
    <string name="editar_bio">Editar Biografía</string>
    <string name="mapa_salida">Toca para abrir el mapa y elegir salida</string>
    <string name="elige_hora">Por favor, elige una hora</string>
    <string name="error_usuario">Error: No se encontró el usuario. Vuelve a iniciar sesión.</string>
    <string name="publicar_viaje_ok">¡Viaje publicado!</string>
    <string name="error_red">Error de red</string>
    <string name="error">Error:</string>
    <string name="selecciona_punto">Selecciona un punto en el mapa</string>
    <string name="no_viajes_radio">No hay viajes en ese radio</string>
    <string name="no_viajes">No se encontraron viajes</string>
    <string name="error_desconocido">Error desconocido</string>
    <string name="companeros_trayecto">Compañeros de Trayecto Cercanos</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas.</string>
    <string name="contrasena_obligatoria">La contraseña es obligatoria</string>



</resources>