<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.activities.LoginActivity">

    <TextView
        android:id="@+id/textoRegister1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/introduce_correo"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenLogoRegister"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <EditText
        android:id="@+id/editTextCorreoRegister"
        android:layout_width="299dp"
        android:layout_height="26dp"
        android:background="@drawable/caja_redonda"
        android:gravity="center_horizontal"
        android:hint="@string/correo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoRegister1" />

    <TextView
        android:id="@+id/textoRegister2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/introduce_contrasena"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextCorreoRegister" />

    <EditText
        android:id="@+id/editTextContraseñaRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:textColor="@color/black"
        android:background="@drawable/caja_redonda"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/textoRegister2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textoRegister3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/repite_contrasena"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextContraseñaRegister" />

    <EditText
        android:id="@+id/editTextRepetirContraseñaRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:textColor="@color/black"
        android:background="@drawable/caja_redonda"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/textoRegister3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textoLogoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/imagenLogoRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/botonRegisterMain"
        android:layout_width="188dp"
        android:layout_height="58dp"
        android:layout_marginTop="196dp"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/boton_gradiante"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenLogoRegister" />

    <ImageView
        android:id="@+id/imagenLogoRegister"
        android:layout_width="187dp"
        android:layout_height="222dp"
        android:src="@drawable/rideshare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

</androidx.constraintlayout.widget.ConstraintLayout>